# mahalaxmi-bangles

./: .gitignore  CONTEXT.md  EXPECTED_FLUTTER_FEATURES_FROM_FLET.md  FEATURE_STATUS.md  FLUTTER_MIGRATION_PHASES.md  FLUTTER_WORKSPACE_README.md  KNOWN_ISSUES.md  PROJECT_CONTEXT.md  PROJECT_HANDOVER.md  PROJECT_MEMORY.md  auth.py  bug101.md  cache.py  card_generator.py  db.py  filtered_log.txt  flet_err.txt  flet_out.txt  flet_stderr.txt  hisaabbook_v17_audit.md  iOS_Migration_Plan.md  main.py  pyproject.toml  requirements.txt  session_helper.py  slip_pdf_generator.py  utils.py
.streamlit/: secrets.toml  secrets.toml.example
android/: debug.keystore
archive/: PROJECT_CONTEXT.md  contextD.md
legacy_flet_app/: .agent.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  Audit Report 11June.md  BACKUP_MANIFEST.md  IMPORTANT_WORKFLOWS.md  MIGRATION_NOTES_FOR_FLUTTER.md  PROJECT_MEMORY.md  PROJECT_STRUCTURE.md  main.py  pyproject.toml  session_helper.py
mahalaxmi_admin/: README.md  build_apk.ps1  pubspec.yaml
mahalaxmi_customer/: .gitignore  README.md  analysis_options.yaml  build_apk.ps1  pubspec.yaml  run_chrome.ps1
mahalaxmi_labour/: README.md  pubspec.yaml
mahalaxmi_shared/: analysis_options.yaml  pubspec.yaml
migration_docs/: 005_cutmail.sql  006_soft_delete_orders.sql  007_admin_web_rls_hardening.sql  ADMIN_DASHBOARD_AUDIT.md  ADMIN_WEB_SECURITY_RLS_AUDIT.md  CATEGORY_ORDER_AUDIT.md  CHUDA_CUSTOMISATION_AUDIT.md  CONTEXT.md  CUSTOMER_IMAGE_UI_AUDIT.md  CUSTOMER_LOGIN_UI_AUDIT.md  CUSTOMER_TEST_BUILD_CHECKLIST.md  FLUTTER_WEB_READINESS_AUDIT.md  (+11 more)
views/: auth.py  (+7 more)
(+255 files in other folders)
