[project]
dependencies = [
    "flet==0.28.3",
    "httpx>=0.27.0",
    "fpdf2>=2.8.0",
    "Pillow>=10.0.0",
    "requests>=2.30.0",
]

[tool.flet.android]
target_arch = ["arm64-v8a"]

[tool.flet.app]
exclude = [
    "build",
    "product_images",
    "generated_cards",
    "item_images",
    "storage",
    "cache",
    "__pycache__",
    "*.pdf",
    "*.log",
    "*.db",
    "customer_session.json",
    ".flet"
]
